Committing Wed, Nov 12th

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle App</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
+    <div id="nav">
+        <img src="/images/checkbox.jpg" alt="logo">
+    </div>
+
+    <div class="container">
+        <div class="menu">
+            <h2>Menu</h2>
+        </div>
+        <div class="mainbody">
+            <h2>To - Do List</h2>
+        </div>
+    </div>
+
     <h1>Todo List</h1>
     <input type="text" id="new-task" placeholder="Add a new task">
     <button id="add-task">Add</button>
