added styling, pulled the button and the text box into the js file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle App</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <div id="nav">
-        <img src="/images/checkbox.jpg" alt="logo">
+        <img id="checkMark" src="./images/checkmark-png-25953.png" alt="logo">
     </div>
 
     <div class="container">
@@ -20,8 +20,10 @@
         </div>
     </div>
 
-    <h1>Todo List</h1>
+    <h1 id="todo">Todo List</h1>
     <input type="text" id="new-task" placeholder="Add a new task">
     <button id="add-task">Add</button>
+
+    <script src="./index.js"></script>
 </body>
 </html>
