--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle App</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <div id="nav">
-        <img src="/images/checkbox.jpg" alt="logo">
+        <img src="./images/logo.png" alt="logo">
     </div>
 
     <div class="container">
