--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <div id="nav">
-        <img id="checkMark" src="./images/checkmark-png-25953.png" alt="logo">
+    <div id="header">
+
+        <div id="nav">
+            <img class="nav-element" id="checkMark" src="./images/checkmark-png-25953.png" alt="logo">
+            <span class="nav-element" id="calendar">View Calendar</span>
+            <span class="nav-element" id="new-task">Add New Task</span>
+        </div>
+    
+            <div class="weather-bar">
+                <h2>Bozeman, MT</h2>
+                <div class="weather-info">
+                    <span class="weather-item" id="temp">Temperature: --</span>
+                    <span class="weather-item" id="wind">Wind Speed: --</span>
+                    <span class="weather-item" id="elevation">Elevation: --</span>
+                </div>
+            </div>
+
     </div>
 
     <div class="container">
@@ -24,6 +39,8 @@
     <input type="text" id="new-task" placeholder="Add a new task">
     <button id="add-task">Add</button>
 
-    <script src="./index.js"></script>
+    <script src="./index.js">
+
+    </script>
 </body>
 </html>
