--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lifestyle App</title>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
     <div id="header">
 
@@ -23,24 +24,115 @@
                     <span class="weather-item" id="elevation">Elevation: --</span>
                 </div>
             </div>
+    <div id="nav">
+        <img class="nav-element" id="checkMark" src="./images/checkmark-png-25953.png" alt="logo">
+       
+        <h1>Lifestyle Dashboard</h1>
+    </div>
 
     </div>
 
     <div class="container">
         <div class="menu">
             <h2>Menu</h2>
+
+            <button class="menu-btn" data-section="todo-section">To-Do List</button>
+            <button class="menu-btn" data-section="weather-section">Weather</button>
+            <button class="menu-btn" data-section="quote-section">Motivational Quotes</button>
+            <button class="menu-btn" data-section="calendar-section">Calendar</button>
+            <button class="menu-btn" data-section="nutrition-section">Nutrition</button>
         </div>
+
         <div class="mainbody">
-            <h2>To - Do List</h2>
+
+            <section id="todo-section" class="section active">
+                <h2>To-Do List</h2>
+
+                <div class="todo-input">
+                    <form id="taskForm">
+                        <!-- <input type="text" id="new-task" placeholder="Add a new task"> -->
+                        <input type="text" id="name" placeholder="Task name">
+                        <input type="text" id="category" placeholder="Category">
+                        <input type="date" id="due_date" >
+                        <button id="add-task">Add</button>
+                    </form>
+                </div>
+
+                <div id="task-list"></div>
+                <script src="index.js" defer></script>
+                <!-- <form action="http://localhost/web_dev_final_project/php/get.php" method="GET" style="display:inline;">
+                    <input type="hidden" name="name" value="">
+                    <input type="hidden" name="category" value="">
+                    <input type="hidden" name="due_date" value="">
+                </form>
+                -->
+            </section>
+
+            <section id="weather-section" class="section">
+                <h2>Weather Overview</h2>
+
+                <div class="weather-search">
+                    <input type="text" id="weather-city" placeholder="Enter a city.">
+                    <button id="weather-btn">Get Weather</button>
+                </div>
+
+                <div id="weather-result" class="weather-card">
+                    <p>Enter a city to view weather data.</p>
+
+                    <div class="weather-bar">
+                        <h2>Bozeman, MT</h2>
+                        <div class="weather-info">
+                            <span class="weather-item" id="temp">Temperature: --</span>
+                            <span class="weather-item" id="wind">Wind Speed: --</span>
+                            <span class="weather-item" id="elevation">Elevation: --</span>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <section id="quote-section" class="section">
+                <h2>Motivational Quote</h2>
+                <p>Quote feature coming soon.</p>
+            </section>
+
+            <section id="calendar-section" class="section">
+                <h2>Calendar</h2>
+                <p>Calendar coming soon.</p>
+            </section>
+
+            <section id="nutrition-section" class="section">
+                <h2>Nutrition Lookup</h2>
+
+                <div class="nutrition-search">
+                    <input type="text" id="nutrition-input" placeholder="Search for a food (e.g., apple)">
+                    <button id="search-nutrition">Search</button>
+                </div>
+
+                <div id="nutrition-results" class="nutrition-results">
+                    <p>Nutrition information.</p>
+                </div>
+            </section>
+
         </div>
     </div>
 
-    <h1 id="todo">Todo List</h1>
-    <input type="text" id="new-task" placeholder="Add a new task">
-    <button id="add-task">Add</button>
+    <script>
+        const buttons = document.querySelectorAll('.menu-btn');
+        const sections = document.querySelectorAll('.section');
 
-    <script src="./index.js">
+        buttons.forEach(btn => {
+            btn.addEventListener('click', () => {
+                const target = btn.dataset.section;
 
+                sections.forEach(sec => {
+                    sec.classList.remove('active');
+                });
+
+                document.getElementById(target).classList.add('active');
+            });
+        });
     </script>
+
 </body>
 </html>
