fixed file paths to db.php in all other php files and in index.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>To-Do List</h2>
 
                 <div class="todo-input">
-                    <form id="taskForm">
+                    <form id="taskForm" action="https://csci331vm.cs.montana.edu/~b44s676@student.montana.edu/web_dev_final_project/php/add.php" method="POST">
                         <!-- <input type="text" id="new-task" placeholder="Add a new task"> -->
                         <input type="text" id="name" placeholder="Task name">
                         <input type="text" id="category" placeholder="Category">
