modified task-list section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>To-Do List</h2>
 
                 <div class="todo-input">
-                    <form id="taskForm" action="https://csci331vm.cs.montana.edu/~b44s676@student.montana.edu/web_dev_final_project/php/add.php" method="POST">
+                    <form id="taskForm" action="localhost/web_dev_final_project/php/add.php" method="POST">
                         <!-- <input type="text" id="new-task" placeholder="Add a new task"> -->
                         <input type="text" id="name" placeholder="Task name">
                         <input type="text" id="category" placeholder="Category">
@@ -43,7 +43,7 @@
 
                 <div id="task-list"></div>
                 <script src="index.js" defer></script>
-                <!-- <form action="http://localhost/web_dev_final_project/php/get.php" method="GET" style="display:inline;">
+                <!-- <form action="localhost/web_dev_final_project/php/get.php" method="GET" style="display:inline;">
                     <input type="hidden" name="name" value="">
                     <input type="hidden" name="category" value="">
                     <input type="hidden" name="due_date" value="">
