added drop-down category selector for the todo list, also modified styling of the todo-input div to look cleaner.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@
                 <h2>To-Do List</h2>
 
                 <div class="todo-input">
-                    <form id="taskForm" action="localhost/web_dev_final_project/php/add.php" method="POST">
+                    <form id="taskForm" action="http://csci331vm.cs.montana.edu/~b44s676@student.montana.edu/web_dev_final_project/php/add.php" method="POST">
                         <!-- <input type="text" id="new-task" placeholder="Add a new task"> -->
                         <input type="text" id="name" placeholder="Task name">
-                        <input type="text" id="category" placeholder="Category">
+                        <select id="taskCategorySelect">
+                        <option value="">-- Select a Category --</option>
+                        <option value="cleaning">Cleaning</option>
+                        <option value="relaxation">Relaxation</option>
+                        <option value="work">Work</option>
+                        <option value="errands">Errands</option>
+                        <option value="health">Health</option>
+                        <option value="hobbies">Hobbies</option>
+                        <option value="financial">Financial</option>
+                        </select>
                         <input type="date" id="due_date" >
                         <button id="add-task">Add</button>
                     </form>
