added name to the category selector, logic for adding taskCategorySelect values updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="todo-input">
                     <form id="taskForm" action="http://csci331vm.cs.montana.edu/~b44s676@student.montana.edu/web_dev_final_project/php/add.php" method="POST">
                         <input type="text" id="name" placeholder="Task name">
-                        <select id="taskCategorySelect">
+                        <select name="taskCategorySelect" id="taskCategorySelect">
                             <option value="">-- Select a Category --</option>
                             <option value="cleaning">Cleaning</option>
                             <option value="relaxation">Relaxation</option>
